--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,22 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-JaT3xCjnRZr0PIruOURBvp5UTxqWa0Y"></script>
 </head>
 <body>
   <app-root></app-root>
+  
+<script>
+  window.onload = function() {
+    // Get the elements with the specified class
+    var elements = document.querySelectorAll('.map-container');
+  
+    // Loop through each element and set its width to 100%
+    for (var i = 0; i < elements.length; i++) {
+      elements[i].style.width = '100%';
+    }
+  };
+  </script>
+
 </body>
 </html>
